7-October-2012 Michael Babker
# Editor plugin requires a JObject
~ Update pt-BR translation

2-October-2012 Michael Babker
+ [#63] Add Blubrry and Podtrac tracking services
~ Update MediaElement.JS to 2.9.5
# [#71] Language Problems when Adding Podcast From Frontend
~ Update 3.0 layouts to master

24-August-2012 Michael Babker
~ Update MediaElement.JS to 2.9.3
~ Joomla! 3.0 compatibility changes

18-July-2012 Michael Babker
~ Resync media component to core

5-July-2012 Michael Babker
! Raise minimum PHP version to PHP 5.3
~ Update MediaElement.JS to 2.9.1

2-July-2012 Michael Babker
# [#69] PHP filesize cannot parse off-server media

1-July-2012 Michael Babker
~ Extend MVC classes from legacy alias as necessary
! Raise minimum version to Joomla! 2.5.6

27-June-2012 Michael Babker
+ Begin layout package for Strapped Joomla! 3 admin template

--------------------------------------------------
Podcast Manager 2.0.1 - Released 24-May-2012
--------------------------------------------------
24-May-2012 Michael Babker
+ Add the RSS Feed URL to the manager
# If the media player isn't enabled, don't process it
# Fix PHP notice about missing podcast ID
+ Use Bootstrap CSS for (currently) unstyled front end table

23-May-2012 Michael Babker
# All of the plugins were missing method="upgrade"

--------------------------------------------------
Podcast Manager 2.0.0 - Released 23-May-2012
--------------------------------------------------
23-May-2012 Michael Babker
~ Update MediaElement.JS to 2.8.2

20-May-2012 Michael Babker
~ Only push through getID3 if the file actually exists and is local
~ Embrace the API - Use JAccess to get the component permissions

4-May-2012 Michael Babker
# Files linked off-site had improper URLs in Feed List

21-April-2012 Michael Babker
~ Update MediaElement.JS to 2.8.1

18-April-2012 Michael Babker
~ [#32] Change file selection popup to use details list

14-April-2012 Michael Babker
+ [#32] Add details list for File Manager
