@@ -14,6 +14,8 @@
 
 defined('_JEXEC') or die;
 
+JLoader::register('PodcastManagerHelper', JPATH_ADMINISTRATOR . '/components/com_podcastmanager/helpers/podcastmanager.php');
+
 /**
  * Feed RAW view class.
  *
@@ -242,22 +244,6 @@ class PodcastManagerViewFeed extends JViewLegacy
 				if (is_file($filepath))
 				{
 					$filename = JUri::base() . $item->filename;
-
-					// If stat tracking is enabled, prepend the service's URL
-					$replacement = str_replace(array('http://', 'https://'), '', $filename);
-					switch ($this->tracking)
-					{
-						case 'blubrry':
-							$filename = 'http://media.blubrry.com/' . $this->trackUser . '/' . $replacement;
-							continue;
-
-						case 'podtrac':
-							$filename = 'http://www.podtrac.com/pts/redirect.mp3/' . $replacement;
-							continue;
-
-						default:
-							continue;
-					}
 				}
 
 				// Process the filesize now
@@ -271,6 +257,9 @@ class PodcastManagerViewFeed extends JViewLegacy
 			}
 			else
 			{
+				// Process the URL through the helper to get the stat tracking details if applicable
+				$filename = PodcastManagerHelper::getMediaUrl($filename);
+
 				// Start writing the element
 				$xw->startElement('item');
 
